--- a/style.css
+++ b/style.css
@@ -4,32 +4,14 @@ body, div, p, ul, li, table, h1, h2, h3{
 }
 
 body{
-	background-color: #dedede;
 	font-family: "Myriad Pro";
 }
 
 #container{
 	width: 1000px;
-	height: 630px;
-	background-color: #f1e3c0;
-	border: 2px solid #c8a777;
-	margin: 50px auto;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-}
-
-#container h1{
-	letter-spacing: -3px;
-	font-size: 45px;
-	color: #54c061;
-	text-shadow: 0px 1px 0px #604826;
-	margin: 20px 0;
-	text-align: center;
+	margin: 0 auto;
 }
 
 #inner{
-	width: 800px;
-	margin: 0 auto;
-	text-align: center;
+	margin: 50px 0 0;
 }
