--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,13 @@ body, div, p, ul, li, table, h1, h2, h3{
 	padding: 0;
 }
 
+@font-face{
+	font-family: "MyriadPro";
+	src: url("../other/MyriadPro-Regular.otf");
+}
+
 body{
-	font-family: "Myriad Pro";
+	font-family: "MyriadPro";
 	background: url("../img/bg.jpg");
 }
 
